@@ -13,26 +13,24 @@
 package org.openhab.binding.knx.internal.channel;
 
 import static java.util.stream.Collectors.*;
+import static org.openhab.binding.knx.internal.KNXBindingConstants.GA;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.knx.internal.KNXTypeMapper;
 import org.openhab.binding.knx.internal.client.InboundSpec;
 import org.openhab.binding.knx.internal.client.OutboundSpec;
+import org.openhab.binding.knx.internal.dpt.KNXCoreTypeMapper;
 import org.openhab.core.config.core.Configuration;
-import org.openhab.core.library.types.DecimalType;
-import org.openhab.core.library.types.QuantityType;
 import org.openhab.core.types.Type;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -50,16 +48,22 @@ import tuwien.auto.calimero.KNXFormatException;
 public abstract class KNXChannelType {
 
     private static final Pattern PATTERN = Pattern.compile(
-            "^((?<dpt>[0-9]{1,3}\\.[0-9]{3,4}):)?(?<read>\\<)?(?<mainGA>[0-9]{1,5}(/[0-9]{1,4}){0,2})(?<listenGAs>(\\+(\\<?[0-9]{1,5}(/[0-9]{1,4}){0,2}))*)$");
+            "^((?<dpt>[1-9]{0,2}\\.[0-9]{3,4}):)?(?<read>\\<)?(?<mainGA>[0-9]{1,5}(/[0-9]{1,4}){0,2})(?<listenGAs>(\\+(\\<?[0-9]{1,5}(/[0-9]{1,4}){0,2}))*)$");
 
     private static final Pattern PATTERN_LISTEN = Pattern
             .compile("\\+((?<read>\\<)?(?<GA>[0-9]{1,5}(/[0-9]{1,4}){0,2}))");
 
     private final Logger logger = LoggerFactory.getLogger(KNXChannelType.class);
     private final Set<String> channelTypeIDs;
+    private final Set<String> gaKeys;
 
     KNXChannelType(String... channelTypeIDs) {
-        this.channelTypeIDs = new HashSet<>(Arrays.asList(channelTypeIDs));
+        this(Set.of(GA), channelTypeIDs);
+    }
+
+    KNXChannelType(Set<String> gaKeys, String... channelTypeIDs) {
+        this.gaKeys = gaKeys;
+        this.channelTypeIDs = Set.of(channelTypeIDs);
     }
 
     final Set<String> getChannelIDs() {
@@ -67,11 +71,11 @@ public abstract class KNXChannelType {
     }
 
     @Nullable
-    protected final ChannelConfiguration parse(@Nullable String fancy) {
-        if (fancy == null) {
+    protected final ChannelConfiguration parse(@Nullable Object fancy) {
+        if (!(fancy instanceof String)) {
             return null;
         }
-        Matcher matcher = PATTERN.matcher(fancy.replace(" ", ""));
+        Matcher matcher = PATTERN.matcher(((String) fancy).replace(" ", ""));
 
         if (matcher.matches()) {
             // Listen GAs
@@ -87,99 +91,50 @@ public abstract class KNXChannelType {
                     matcher.group("read") != null);
 
             return new ChannelConfiguration(matcher.group("dpt"), mainGA, listenGAs);
+        } else {
+            logger.warn("Failed parsing channel configuration '{}'.", fancy);
         }
+
         return null;
     }
 
-    protected abstract Set<String> getAllGAKeys();
-
-    public final Set<GroupAddress> getListenAddresses(Configuration channelConfiguration) {
-        Set<GroupAddress> ret = new HashSet<>();
-        for (String key : getAllGAKeys()) {
-            ChannelConfiguration conf = parse((String) channelConfiguration.get(key));
-            if (conf != null) {
-                ret.addAll(conf.getListenGAs().stream().map(this::toGroupAddress).collect(toSet()));
-            }
-        }
-        return ret;
+    private Set<GroupAddress> filterGroupAddresses(Configuration channelConfiguration,
+            Function<ChannelConfiguration, List<GroupAddressConfiguration>> filter) {
+        return gaKeys.stream().map(channelConfiguration::get).map(this::parse).filter(Objects::nonNull)
+                .map(Objects::requireNonNull).map(filter).flatMap(List::stream).map(this::toGroupAddress)
+                .flatMap(Optional::stream).collect(Collectors.toSet());
     }
 
-    public final Set<GroupAddress> getReadAddresses(Configuration channelConfiguration) {
-        Set<GroupAddress> ret = new HashSet<>();
-        for (String key : getAllGAKeys()) {
-            ChannelConfiguration conf = parse((String) channelConfiguration.get(key));
-            if (conf != null) {
-                ret.addAll(conf.getReadGAs().stream().map(this::toGroupAddress).collect(toSet()));
-            }
-        }
-        return ret;
+    public final Set<GroupAddress> getAllGroupAddresses(Configuration channelConfiguration) {
+        return filterGroupAddresses(channelConfiguration, ChannelConfiguration::getListenGAs);
     }
 
     public final Set<GroupAddress> getWriteAddresses(Configuration channelConfiguration) {
-        Set<GroupAddress> ret = new HashSet<>();
-        for (String key : getAllGAKeys()) {
-            ChannelConfiguration conf = parse((String) channelConfiguration.get(key));
-            if (conf != null) {
-                GroupAddress ga = toGroupAddress(conf.getMainGA());
-                if (ga != null) {
-                    ret.add(ga);
-                }
-            }
-        }
-        return ret;
+        return filterGroupAddresses(channelConfiguration, configuration -> List.of(configuration.getMainGA()));
     }
 
-    private @Nullable GroupAddress toGroupAddress(GroupAddressConfiguration ga) {
+    private Optional<GroupAddress> toGroupAddress(GroupAddressConfiguration ga) {
         try {
-            return new GroupAddress(ga.getGA());
+            return Optional.of(new GroupAddress(ga.getGA()));
         } catch (KNXFormatException e) {
             logger.warn("Could not parse group address '{}'", ga.getGA());
         }
-        return null;
+        return Optional.empty();
     }
 
-    protected final Set<GroupAddress> getAddresses(@Nullable Configuration configuration, Iterable<String> addresses)
+    public final @Nullable OutboundSpec getCommandSpec(Configuration configuration, Type command)
             throws KNXFormatException {
-        Set<GroupAddress> ret = new HashSet<>();
-        for (String address : addresses) {
-            if (configuration != null && configuration.get(address) != null) {
-                ret.add(new GroupAddress((String) configuration.get(address)));
-            }
-        }
-        return ret;
-    }
-
-    protected final boolean isEquals(@Nullable Configuration configuration, String address, GroupAddress groupAddress)
-            throws KNXFormatException {
-        if (configuration != null && configuration.get(address) != null) {
-            return Objects.equals(new GroupAddress((String) configuration.get(address)), groupAddress);
-        }
-        return false;
-    }
-
-    protected final Set<String> asSet(String... values) {
-        return Collections.unmodifiableSet(new HashSet<>(Arrays.asList(values)));
-    }
-
-    public final @Nullable OutboundSpec getCommandSpec(Configuration configuration, KNXTypeMapper typeHelper,
-            Type command) throws KNXFormatException {
-        logger.trace("getCommandSpec testing Keys '{}' for command '{}'", getAllGAKeys(), command);
-        for (String key : getAllGAKeys()) {
-            ChannelConfiguration config = parse((String) configuration.get(key));
+        logger.trace("getCommandSpec checking keys '{}' for command '{}' ({})", gaKeys, command, command.getClass());
+        for (String key : gaKeys) {
+            ChannelConfiguration config = parse(configuration.get(key));
             if (config != null) {
-                String dpt = config.getDPT();
-                if (dpt == null) {
-                    dpt = getDefaultDPT(key);
-                }
-                Class<? extends Type> expectedTypeClass = typeHelper.toTypeClass(dpt);
-                if (expectedTypeClass != null) {
-                    if (expectedTypeClass.isInstance(command)
-                            || ((expectedTypeClass == DecimalType.class) && (command instanceof QuantityType))) {
-                        logger.trace(
-                                "getCommandSpec key '{}' uses expectedTypeClass '{}' which isInstance for command '{}' and dpt '{}'",
-                                key, expectedTypeClass, command, dpt);
-                        return new WriteSpecImpl(config, dpt, command);
-                    }
+                String dpt = Objects.requireNonNullElse(config.getDPT(), getDefaultDPT(key));
+                Set<Class<? extends Type>> expectedTypeClass = KNXCoreTypeMapper.getAllowedTypes(dpt);
+                if (expectedTypeClass.contains(command.getClass())) {
+                    logger.trace(
+                            "getCommandSpec key '{}' has expectedTypeClass '{}', matching command '{}' and dpt '{}'",
+                            key, expectedTypeClass, command, dpt);
+                    return new WriteSpecImpl(config, dpt, command);
                 }
             }
         }
@@ -188,28 +143,24 @@ public abstract class KNXChannelType {
     }
 
     public final List<InboundSpec> getReadSpec(Configuration configuration) throws KNXFormatException {
-        return getAllGAKeys().stream()
-                .map(key -> new ReadRequestSpecImpl(parse((String) configuration.get(key)), getDefaultDPT(key)))
+        return gaKeys.stream().map(key -> new ReadRequestSpecImpl(parse(configuration.get(key)), getDefaultDPT(key)))
                 .filter(spec -> !spec.getGroupAddresses().isEmpty()).collect(toList());
     }
 
     public final @Nullable InboundSpec getListenSpec(Configuration configuration, GroupAddress groupAddress) {
-        Optional<ListenSpecImpl> result = getAllGAKeys().stream()
-                .map(key -> new ListenSpecImpl(parse((String) configuration.get(key)), getDefaultDPT(key)))
+        return gaKeys.stream().map(key -> new ListenSpecImpl(parse(configuration.get(key)), getDefaultDPT(key)))
                 .filter(spec -> !spec.getGroupAddresses().isEmpty())
-                .filter(spec -> spec.getGroupAddresses().contains(groupAddress)).findFirst();
-        return result.isPresent() ? result.get() : null;
+                .filter(spec -> spec.getGroupAddresses().contains(groupAddress)).findFirst().orElse(null);
+    }
+
+    public final @Nullable OutboundSpec getResponseSpec(Configuration configuration, GroupAddress groupAddress,
+            Type value) {
+        return gaKeys.stream()
+                .map(key -> new ReadResponseSpecImpl(parse(configuration.get(key)), getDefaultDPT(key), value))
+                .filter(spec -> spec.matchesDestination(groupAddress)).findFirst().orElse(null);
     }
 
     protected abstract String getDefaultDPT(String gaConfigKey);
-
-    public final @Nullable OutboundSpec getResponseSpec(Configuration configuration, GroupAddress groupAddress,
-            Type type) throws KNXFormatException {
-        Optional<ReadResponseSpecImpl> result = getAllGAKeys().stream()
-                .map(key -> new ReadResponseSpecImpl(parse((String) configuration.get(key)), getDefaultDPT(key), type))
-                .filter(spec -> groupAddress.equals(spec.getGroupAddress())).findFirst();
-        return result.isPresent() ? result.get() : null;
-    }
 
     @Override
     public String toString() {
